syntax="proto3";

import "google/protobuf/empty.proto";

package grpc;

message AddSupplierReq{
    string namaSupplier=1;
    string  alamat=2;
    string telepon=3;
    string email=4;
    int32 status=5;
    string createdBy=6;
    string keterangan=7;
 
}

message ReadByNamaSupplierReq{
    string namaSupplier=1;
}


message ReadByNamaSupplierResp{
    int32   IDSupplier=1;
    string namaSupplier=2;
    string  alamat=3;
    string telepon=4;
    string email=5;
    int32 status=6;
    string createdBy=7;
    string keterangan=8;
}

message ReadByKeteranganReq{
    int32   IDSupplier=1;
    string namaSupplier=2;
    string  alamat=3;
    string telepon=4;
    string email=5;
    int32 status=6;
    string createdBy=7;
    string keterangan=8;
}


message ReadByKeteranganResp{
    repeated ReadByIDSupplierResp allKeterangan=1;
}

message ReadSupplierResp{
    repeated ReadByNamaSupplierResp allSupplier=1;
}

message UpdateSupplierReq{
    int32   IDSupplier=1;
    string namaSupplier=2;
    string  alamat=3;
    string telepon=4;
    string email=5;
    int32 status=6;
    string updateBy=7;
    string keterangan=8;
}
service SupplierService{
    rpc AddSupplier (AddSupplierReq) returns (google.protobuf.Empty){};
    rpc ReadByNamaSupplier(ReadByNamaSupplierReq) returns (ReadByNamaSupplierResp) {};
    rpc ReadSupplier(google.protobuf.Empty) returns (ReadSupplierResp){};
    rpc UpdateSupplier(UpdateSupplierReq) returns (google.protobuf.Empty){};
    rpc ReadByKeterangan(ReadByKeteranganReq) returns (ReadByKeteranganResp) {};
}